update unit and integration tests